--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 
 [dependencies]
 thiserror = "2.0.11"
-num_enum = "=0.5.3"
+num_enum = "0.7.3"
 binius_field.workspace = true
 binius_utils.workspace = true
 env_logger = "0.11.6"
@@ -18,4 +18,4 @@ strum = "0.27.1"
 strum_macros = "0.27.1"
 
 [dev-dependencies]
-rand = "0.8"
+rand = "0.9.0"
