--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -10,10 +10,7 @@ env_logger = "0.11.7"
 anyhow = "1.0"
 zcrayvm-assembly = { path = "../assembly" }
 bumpalo = { version = "3.16.0", features = ["collections"] }
-bytemuck = { version = "1.18.0", features = [
-    "derive",
-    "min_const_generics",
-] }
+bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics"] }
 thiserror = "2.0.11"
 
 # Binius dependencies
