PoC: Modular ISA for customizable statements (#86)
This is a first draft attempt at having a more modular and extensible
abstraction for the VM at the instruction level.

Note that I've moved the `Opcode -> Event` generation outside of the
`interpreter` as part of another refactoring but it got into this PR,
though technically unrelated to what I'll explain below.

## Main changes

### Table redesign

I had to encapsulate the logic behind tables in a common trait, but was
fighting for a bit issues with dynamic dispatch of associated types, so
I ended up having:

- a base `Table` trait that defines the table constraints and flushing
rules, and implements `as_any()` for downcasting to a concrete type
(similarly to what's done for some instructions on the `assembly` side).

```rust
pub trait Table {
    type Event: 'static;
    fn name(&self) -> &'static str;
    fn new(cs: &mut ConstraintSystem, channels: &Channels) -> Self;
    fn as_any(&self) -> &dyn Any;
}
```

- a `FillableTable` trait, that only purpose is to hide the associated
`Table::Event` type and serve as dynamic dispatch within some `tables:
Vec<Box<dyn FillableTable>>`, as well as providing some wrapper for
`self.fill(witness, trace)`.

```rust
pub trait FillableTable {
    fn fill(&self, witness: &mut WitnessIndex<'_, '_, ProverPackedField>, trace: &Trace) -> Result<()>;
    fn num_events(&self, trace: &Trace) -> usize;
}
```

- a main `TableEntry` struct, that serves as wrapper for concrete
tables, along with some "accessor" to get the corresponding events from
a `Trace`

```rust
pub struct TableEntry<T: TableFiller> {
    pub table: Box<T>,
    pub get_events: fn(&Trace) -> &[T::Event],
}
```

(Note that all types have more extensive Rustdoc comments inline. Feel
free to do `cargo doc --no-deps --open` to have a look if it makes
things clearer).

### ISA definition

Now that we have `FillableTable`, we can define an `ISA` trait that
would serve as base type for our different machine configs
(recursion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
+anyhow = "1.0"
 binius_core = { git = "https://github.com/IrreducibleOSS/binius.git" }
 binius_field = { git = "https://github.com/IrreducibleOSS/binius.git" }
 binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git" }
