--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -4,12 +4,14 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anyhow.workspace = true
 thiserror = "2.0.11"
 num_enum = "0.7.3"
 binius_field.workspace = true
 binius_utils.workspace = true
 env_logger = "0.11.6"
 num-traits = "0.2"
+once_cell = "1.21.3"
 pest = "2.7.15"
 pest_derive = "2.7.15"
 tracing = "0.1.41"
