--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2021"
 
 [workspace.dependencies]
 anyhow = "1.0"
-binius_core = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_field = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git" }
+binius_core = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "b4705d9" }
+binius_field = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "b4705d9" }
+binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "b4705d9" }
+binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "b4705d9" }
+binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "b4705d9" }
+binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "b4705d9" }
 
 [profile.release]
 lto = "fat"
