--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -2,6 +2,15 @@
 name = "petravm-assembly"
 version.workspace = true
 edition.workspace = true
+description = "PetraVM's custom assembly language parser and interpreter."
+documentation = "https://docs.rs/petravm-assembly"
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+readme.workspace = true
+authors.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 anyhow.workspace = true
