Cleanup pre-publishing (#157)
From discussion on slack with Jim:
- changed crate name from `petravm-assembly` to `petravm-asm`
- added `petravm-verifier` crate template for crates.io squatting
- removed unused deps

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -3,7 +3,7 @@ name = "petravm-prover"
 version.workspace = true
 edition.workspace = true
 description = "PetraVM's prover"
-documentation = "https://docs.rs/petravm-assembly"
+documentation = "https://docs.rs/petravm-prover"
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
@@ -17,11 +17,10 @@ anyhow.workspace = true
 bumpalo = { version = "3.16.0", features = ["collections"] }
 bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics"] }
 clap = { version = "4.5.20", features = ["derive"] }
-env_logger = "0.11.7"
 log = "0.4"
 paste = "1.0.15"
 thiserror = "2.0.11"
-petravm-assembly = { path = "../assembly" }
+petravm-asm = { path = "../assembly" }
 
 # Binius dependencies
 binius_core.workspace = true
@@ -34,4 +33,3 @@ binius_m3.workspace = true
 binius_m3 = { workspace = true, features = ["test_utils"] }
 proptest = "1.4.0"
 rand = { version = "0.9.1", features = ["std"] }
-petravm-assembly = { path = "../assembly" }
