--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -7,7 +7,7 @@ documentation = "https://docs.rs/petravm-assembly"
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
-readme.workspace = true
+readme = "README.md"
 authors.workspace = true
 keywords.workspace = true
 categories.workspace = true
