Add structured tracing (#174)

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -21,6 +21,9 @@ log = "0.4"
 paste = "1.0.15"
 petravm-asm = { path = "../assembly" }
 thiserror = "2.0.12"
+tracing.workspace = true
+tracing-forest.workspace = true
+tracing-subscriber.workspace = true
 
 # Binius dependencies
 binius_core.workspace = true
