--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ categories = ["cryptography", "compilers", "wasm"]
 
 [workspace.dependencies]
 anyhow = "1.0"
+tracing = "0.1.41"
+tracing-forest = { version = "0.1.6", features = ["ansi"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Binius dependencies
 binius_core = { git = "https://github.com/IrreducibleOSS/binius.git" }
 binius_field = { git = "https://github.com/IrreducibleOSS/binius.git" }
 binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git" }
