--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -24,8 +24,9 @@ pest_derive = "2.8.0"
 strum = "0.27.1"
 strum_macros = "0.27.1"
 thiserror = "2.0.12"
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing.workspace = true
+tracing-forest.workspace = true
+tracing-subscriber.workspace = true
 
 # Binius dependencies
 binius_m3.workspace = true
