--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -13,6 +13,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
+ahash.workspace = true
 anyhow.workspace = true
 binius_field.workspace = true
 binius_utils.workspace = true
