Add shift benches for the prover (#148)
This PR also includes a column optimization for VROM-based shift
opcodes.

A benchmark results can be found in #179

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -35,5 +35,10 @@ binius_m3.workspace = true
 
 [dev-dependencies]
 binius_m3 = { workspace = true, features = ["test_utils"] }
+criterion = "0.5.1"
 proptest = "1.6.0"
 rand = { version = "0.9.1", features = ["std"] }
+
+[[bench]]
+name = "shift"
+harness = false
