tracing-profile integration (#184)
This allows generating [Perfetto](https://ui.perfetto.dev/) traces, just
like in Binius.

You can run it with:
```bash
cargo run --example collatz --release --features "perfetto"
```

Unfortunately, it only works on Linux machines.

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -24,6 +24,7 @@ petravm-asm = { path = "../assembly" }
 thiserror = "2.0.12"
 tracing.workspace = true
 tracing-forest.workspace = true
+tracing-profile.workspace = true
 tracing-subscriber.workspace = true
 
 # Binius dependencies
