--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -27,6 +27,7 @@ strum_macros = "0.27.1"
 thiserror = "2.0.12"
 tracing.workspace = true
 tracing-forest.workspace = true
+tracing-profile.workspace = true
 tracing-subscriber.workspace = true
 
 # Binius dependencies
@@ -34,3 +35,7 @@ binius_m3.workspace = true
 
 [dev-dependencies]
 rand = "0.9.1"
+
+[features]
+tracing-profile = []
+perfetto = ["tracing-profile", "tracing-profile/perfetto"]
