Add benchmarks for all opcodes (#183)
This PR adds benchmarks for all opcodes (except for some simple
call/jump/ldi/ret opcodes whose performance should be similar to XOR).
It also adds the ability to disable channels so that we can measure:

- Channel proving time
- Table-only proving time

The results in this PR were generated by running the following two
commands:
```shell
python3 generate_opcode_benchmarks.py
python3 generate_opcode_benchmarks.py \
  --features "disable_vrom_channel,disable_prom_channel,disable_state_channel,disable_vrom_addr_space_channel"
``` 

Results preview:
https://raw.githack.com/PetraProver/PetraVM/sai/benchmar_all_opcodes/docs/benches/index.html

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -12,6 +12,14 @@ authors.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
+[features]
+default = []
+# Feature flags for disabling individual channels for benchmarking
+disable_state_channel = []
+disable_prom_channel = []
+disable_vrom_channel = []
+disable_vrom_addr_space_channel = []
+
 [dependencies]
 ahash.workspace = true
 anyhow.workspace = true
@@ -42,4 +50,8 @@ rand = { version = "0.9.1", features = ["std"] }
 
 [[bench]]
 name = "shift"
+harness = false
+
+[[bench]]
+name = "opcodes"
 harness = false
