Change bumpalo to binius HostBumpAllocator (#203)
The latest binius master started using the internal
binius::HostBumpAllocator, so I updated this to match. It uses a
somewhat magic size, but it passes the Fibonacci test with 100,000
iterations, so I hope it should work well.
Also changed OptimalUnderlier128b to OptimalUnderlier to get better
performance with AVX2/AVX512.

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -22,7 +22,6 @@ disable_vrom_addr_space_channel = []
 
 [dependencies]
 anyhow.workspace = true
-bumpalo = { version = "3.17.0", features = ["collections"] }
 bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
 clap = { version = "4.5.37", features = ["derive"] }
 log = "0.4"
@@ -35,6 +34,7 @@ tracing-profile.workspace = true
 tracing-subscriber.workspace = true
 
 # Binius dependencies
+binius_compute.workspace = true
 binius_core.workspace = true
 binius_fast_compute.workspace = true
 binius_field.workspace = true
